--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,47 @@
-<h1> post details of a given post</h1>
+<section id="user_details">
+  <div class="user-info">
+    <div class="user-photo"><%= image_tag @user.photo, class: "profile-photo"%></div>
+    <div class="badge">
+      <h1 class="userName"><%= @user.name %></h1>
+      <div class="badge-numbers">
+        <h3 class="postCount">
+          Number of posts: <%= @user.postscounter %>
+        </h3>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+ <div class="posts_container">
+    <% if @user_posts.present? %>
+      <% @user_posts.each do |post| %>
+        <div class="post">
+          <h3><%= post.title %></h3>
+          <p class="post_text"><%= post.text %></p>
+          <p class="comments-counter">
+            Comments: <%= post.comments_counter %>,
+            Likes: <%= post.likes_counter %>
+          </p>
+          <%= link_to "view post", user_post_path(@user, post) %>
+        </div>
+        <div class="post">
+          <h4>Comments</h4>
+          <% @post_comments.each do |comment| %>
+            <ul>
+              <% if comment.post_id === post.id %>
+                <li><%= comment.user.name %>: <%= comment.text %></li>
+              <% end %>
+            </ul>
+          <% end %>
+        </div>
+        <br>
+      <% end %>
+    <% else %>
+      <p>No posts found.</p>
+    <% end %>
+
+    <button class="display-posts">
+      Next
+    </button>
+  </div>
+</section>
