--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,40 @@
-<h1>list of all the users </h1>
+<section id="user_details">
+  <div class="user-info">
+    <div class="user-photo">
+      <%= image_tag @user.photo, class: "profile-photo" %>
+    </div>
+    <div class="badge">
+      <h1 class="userName"><%= @user.name %></h1>
+      <div class="badge-numbers">
+        <h3 class="postCount">
+          Number of posts: <%= @user.postscounter %>
+        </h3>
+      </div>
+    </div>
+  </div>
+
+  <div class="bio">
+    <h2>Bio</h2>
+    <p class="bio_text"><%= @user.bio %></p>
+  </div>
+
+  <div class="posts_container">
+  <% if @recent_posts.present? %>
+    <% @recent_posts.each_with_index do |post, index| %>
+      <div class="post">
+        <h3>Post #<%= index + 1 %></h3>
+        <p class="post_text"><%= post.text %></p>
+        <p class="comments-counter">
+          Comments: <%= post.comments_counter %>,
+          Likes: <%= post.likes_counter %>
+        </p>
+      </div>
+    <% end %>
+  <% else %>
+    <p>No recent posts found.</p>
+  <% end %>
+
+  <%= link_to "See all posts", user_posts_path(@user), class: "display-posts" %>
+</div>
+
+</section>
