--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: Helvetica, Geneva, Arial, sans-serif;
   font-size: small;
@@ -37,7 +36,7 @@ body {
 
 h1 {
   font-size: 35px;
-  height: fit-content;
+  height: 50px;
 }
 
 h3 {
