--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -17,24 +17,30 @@
     <h2>Bio</h2>
     <p class="bio_text"><%= @user.bio %></p>
   </div>
-
-  <div class="posts_container">
-  <% if @recent_posts.present? %>
+ <div class="posts_container">
     <% @recent_posts.each_with_index do |post, index| %>
       <div class="post">
-        <h3>Post #<%= index + 1 %></h3>
+        <h3>Post #<%= index+1 %></h3>
         <p class="post_text"><%= post.text %></p>
-        <p class="comments-counter">
+        <p class="commentsCount">
           Comments: <%= post.comments_counter %>,
           Likes: <%= post.likes_counter %>
         </p>
       </div>
+      <br>
     <% end %>
-  <% else %>
-    <p>No recent posts found.</p>
-  <% end %>
-
-  <%= link_to "See all posts", user_posts_path(@user), class: "display-posts" %>
-</div>
-
+    <br>
+    <div class="btns">
+    <button class="seePosts">
+      <%= link_to "See all posts", user_posts_path(@user) %>
+    </button>
+    <button class="seePosts createPost">
+      <%= link_to "create post", new_user_post_path(@user) %>
+    </button>
+    <button class="seePosts home">
+      <%=link_to 'home',  '/users' %>
+    </button>
+    </div>
+    
+  </div>
 </section>
