--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,36 +12,46 @@
   </div>
   <br>
   <br>
- <div class="posts_container">
-    <% if @user_posts.present? %>
-      <% @user_posts.each do |post| %>
+  <div class="posts_container">
+  <% (@user_posts || []).each do |post| %>
         <div class="post">
-          <h3><%= post.title %></h3>
-          <p class="post_text"><%= post.text %></p>
-          <p class="comments-counter">
-            Comments: <%= post.comments_counter %>,
-            Likes: <%= post.likes_counter %>
-          </p>
+        <h3><%= post.title %></h3>
+        <p class="post_text"><%= post.text %></p>
+        <p class="commentsCount">
+          Comments: <%= post.comments_counter %>,
+          Likes: <%= post.likes_counter %>
+        </p>
+        <div class="links">
           <%= link_to "view post", user_post_path(@user, post) %>
+          <div class="add_like">
+            <%= link_to "Add comment", new_user_post_comment_path(user_id: @user, post_id: post)  %>|
+            <%= link_to "Add a like", new_user_post_like_path(user_id: @user, post_id: post.id) %>
+          </div>
         </div>
-        <div class="post">
-          <h4>Comments</h4>
-          <% @post_comments.each do |comment| %>
-            <ul>
-              <% if comment.post_id === post.id %>
-                <li><%= comment.user.name %>: <%= comment.text %></li>
-              <% end %>
-            </ul>
-          <% end %>
-        </div>
-        <br>
-      <% end %>
-    <% else %>
-      <p>No posts found.</p>
+      </div>
+      <div class="post">
+        <h4>Comments</h4>
+        <% @post_comments.each do |comment| %>
+          <ul>
+            <% if comment.post_id === post.id %>
+              <li><%= @user.name %>: <%= comment.text %></li>
+            <% end %>
+          </ul>
+        <% end %>
+      </div>
+      <br>
     <% end %>
-
-    <button class="display-posts">
-      Next
-    </button>
+    <br>
+    <div class="btns">
+      <button class="seePosts">
+        Next
+      </button>
+      <button class="seePosts home">
+        <%=link_to 'home',  '/users' %>
+      </button>
+      <button class="seePosts home">
+        <%= link_to 'back', "/users/#{@user.id}" %>
+      </button>
+    </div>
   </div>
 </section>
