--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,21 @@
-<div class="form-container">
-  <h1>New Post</h1>
-  <%= render "shared/form", post: @post %>
-  <p class="back"><%=link_to 'Back to posts', user_posts_path %></p>
-  <div>
+<section>
+  <h2>New Post</h2>
+  <% if @post.errors.any? %>
+    <div>
+      <% @post.errors.full_messages.each do |message| %>
+      <p><%= message %></p>
+      <% end %>
+    </div>
+  <% end %>
+  <%= form_with model: @post, url: user_posts_path(@user) do |form| %>
+    <div>
+      <%= form.label :title, class: "form-label" %>
+      <%= form.text_field :title, required: true, autofocus: true, class: "form-input" %>
+    </div>
+    <div>
+      <%= form.label :text, class: "form-label" %>
+      <%= form.text_area :text, required: true, autofocus: true, class: "form-input" %>
+    </div>
+    <%= form.submit "submit", class: "form-button" %>
+  <% end %>
+</section>
