--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,17 +18,19 @@
     <p class="bio_text"><%= @user.bio %></p>
   </div>
  <div class="posts_container">
-    <% @recent_posts.each_with_index do |post, index| %>
-      <div class="post">
-        <h3>Post #<%= index+1 %></h3>
-        <p class="post_text"><%= post.text %></p>
-        <p class="commentsCount">
-          Comments: <%= post.comments_counter %>,
-          Likes: <%= post.likes_counter %>
-        </p>
-      </div>
-      <br>
-    <% end %>
+   <% @recent_posts.each_with_index do |post, index| %>
+  <div class="post">
+    <h3>Post <%= index+1 %> by User <%= @user.id %> </h3>
+    <p class="post_text"><%= post.text %></p>
+    <p class="commentsCount">
+      Comments: <%= post.comments_counter %>,
+      Likes: <%= post.likes_counter %>
+    </p>
+<%= link_to "See post #{index +1}", user_post_path(@user, post) %>
+  </div>
+  <br>
+<% end %>
+
     <br>
     <div class="btns">
     <button class="seePosts">
@@ -37,7 +39,7 @@
     <button class="seePosts createPost">
       <%= link_to "create post", new_user_post_path(@user) %>
     </button>
-    <button class="seePosts home">
+    <button class="see posts home">
       <%=link_to 'home',  '/users' %>
     </button>
     </div>
