--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
   <body>
     <header>
       <% if user_signed_in? %>
-        <%= link_to 'Sign out', destroy_user_session_path, method: :delete %>
+<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+
+
       <% else %>
         <%= link_to 'Sign up', new_user_registration_path %>
         <%= link_to 'Sign in', new_user_session_path %>
