--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <section id="user_details">
   <div class="user-info">
-    <div class="user-photo"><%= image_tag @user.photo, class: "profile-photo"%></div>
+    <div class="user-photo"><%= image_tag(@user.photo.presence || "default.jpg", class: "profile-photo") %></div>
     <div class="badge">
       <h1 class="userName"><%= @user.name %></h1>
       <div class="badge-numbers">
