--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -55,11 +55,17 @@ h3 {
 .posts-comments {
   border: 2px solid #000;
   padding: 15px;
+  height: fit-content;
+}
+
+.post {
+  position: relative;
 }
 
 .comments-counter {
-  display: flex;
-  justify-content: flex-end;
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
   font-weight: bold;
 }
 
@@ -86,4 +92,88 @@ ul {
 
 .text {
   font-size: 16px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.form-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 500px;
+  padding: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+
+.field,
+.actions {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.field:last-child,
+.actions:last-child {
+  margin-bottom: 0;
+}
+
+input#user_email,
+input#user_password,
+input[type="submit"].login-button {
+  width: 100% !important;
+  padding: 16px 0;
+}
+
+.login-button {
+  background-color: blue;
+  color: white;
+  width: 100%;
+  padding: 16px 20px;
+  border-radius: 5px;
+  margin: 20px 0;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  gap: 1rem; /* Adjust the gap value to your preference */
+}
+
+.form-container {
+  width: 100%;
+}
+
+.form-label,
+.form-input,
+.form-submit {
+  width: 100%;
+}
+
+input#user_name , input#user_email , input#user_password, input#user_password_confirmation {
+  padding: 10px 20px;
+}
+
+.bio {
+  margin-bottom: 10px;
+}
+
+/* Add these new rules */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-stats {
+  font-size: 20px;
+  margin: 0;
 }
