--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,17 +1,25 @@
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { class: "form" }) do |f| %>
   <%= devise_error_messages! %>
 
-  <%= f.label :name %>
-  <%= f.text_field :name %>
+  <div class="form-container">
+    <%= f.label :name, class: "form-label" %>
+    <%= f.text_field :name, class: "form-input" %>
+  </div>
 
-  <%= f.label :email %>
-  <%= f.email_field :email %>
+  <div class="form-container">
+    <%= f.label :email, class: "form-label" %>
+    <%= f.email_field :email, class: "form-input" %>
+  </div>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+  <div class="form-container">
+    <%= f.label :password, class: "form-label" %>
+    <%= f.password_field :password, class: "form-input" %>
+  </div>
 
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confirmation %>
+  <div class="form-container">
+    <%= f.label :password_confirmation, class: "form-label" %>
+    <%= f.password_field :password_confirmation, class: "form-input" %>
+  </div>
 
-  <%= f.submit "Sign up" %>
+  <%= f.submit "Sign up", class: "login-button" %>
 <% end %>
