--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,15 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= stylesheet_link_tag "style", media: "all", "data-turbolinks-track": "reload" %>
+
   </head>
 
   <body>
     <header>
       <% if user_signed_in? %>
 <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+<%#  link_to "Sign Out", sign_out_path, method: :delete  %>
 
 
       <% else %>
