--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -17,7 +17,7 @@
         <div class="post">
         <h3><%= post.title %></h3>
         <p class="post_text"><%= post.text %></p>
-        <p class="commentsCount">
+        <p class="comments-counter">
           Comments: <%= post.comments_counter %>,
           Likes: <%= post.likes_counter %>
         </p>
