--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,9 +1,13 @@
-<h1> list of all users posts</h1>
+<div class="header">
+  <h1>Post <%= @post.id %></h1>
+  <h4 class="header-stats">Comments: <%= @post.comments_counter %>, Likes: <%= @post.likes_counter %></h4>
+</div>
 <section id="post_info">
   <div class="post_desc">
     <div class="unit">
-      <h2><%= @post.title %> by <%= @post.author.name%></h2>
-      <h4>Comments:<%= @post.comments_counter%>,  Likes:<%= @post.likes_counter%></h4>
+      <h2><%= @post.title %> by <%= @post.author.name %></h2>
+    </div>
+  </div>
     </div>
     <p class="P_text"><%= @post.text%></p>
   </div>
