--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <section id="user_details">
   <div class="user-info">
     <div class="user-photo">
-<%= image_tag(@user.photo.presence || "default.jpg", class: "profile-photo") %>
+      <%= image_tag(@user.photo.presence || "default.jpg", class: "profile-photo") %>
     </div>
     <div class="badge">
       <h1 class="userName"><%= @user.name %></h1>
@@ -17,32 +17,30 @@
     <h2>Bio</h2>
     <p class="bio_text"><%= @user.bio %></p>
   </div>
- <div class="posts_container">
-   <% @recent_posts.each_with_index do |post, index| %>
-  <div class="post">
-    <h3>Post <%= index+1 %> by User <%= @user.id %> </h3>
-    <p class="post_text"><%= post.text %></p>
-    <p class="commentsCount">
-      Comments: <%= post.comments_counter %>,
-      Likes: <%= post.likes_counter %>
-    </p>
-<%= link_to "See post #{index +1}", user_post_path(@user, post) %>
-  </div>
-  <br>
-<% end %>
+  <div class="posts_container">
+    <% @recent_posts.each_with_index do |post, index| %>
+      <div class="post">
+        <h3><%= link_to "Post #{index + 1} by User #{@user.id}", user_post_path(@user, post) %></h3>
+        <p class="post_text"><%= post.text %></p> <!-- Close the p tag here -->
+        <p class="comments-counter">
+          Comments: <%= post.comments_counter %>,
+          Likes: <%= post.likes_counter %>
+        </p>
+      </div>
+      <br>
+    <% end %>
 
     <br>
     <div class="btns">
-    <button class="seePosts">
-      <%= link_to "See all posts", user_posts_path(@user) %>
-    </button>
-    <button class="seePosts createPost">
-      <%= link_to "create post", new_user_post_path(@user) %>
-    </button>
-    <button class="see posts home">
-      <%=link_to 'home',  '/users' %>
-    </button>
+      <button class="seePosts">
+        <%= link_to "See all posts", user_posts_path(@user) %>
+      </button>
+      <button class="seePosts createPost">
+        <%= link_to "create post", new_user_post_path(@user) %>
+      </button>
+      <button class="see posts home">
+        <%= link_to 'home', '/users' %>
+      </button>
     </div>
-    
   </div>
 </section>
