--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -55,7 +55,7 @@ h3 {
 .posts-comments {
   border: 2px solid #000;
   padding: 15px;
-  height: fit-content;
+  height: 100%;
 }
 
 .post {
@@ -110,7 +110,7 @@ ul {
   max-width: 500px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  background-color: #ffffff;
+  background-color: #fff;
 }
 
 .field,
@@ -158,7 +158,10 @@ input[type="submit"].login-button {
   width: 100%;
 }
 
-input#user_name , input#user_email , input#user_password, input#user_password_confirmation {
+input#user_name,
+input#user_email,
+input#user_password,
+input#user_password_confirmation {
   padding: 10px 20px;
 }
 
