--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,9 @@
           Comments: <%= post.comments_counter %>,
           Likes: <%= post.likes_counter %>
         </p>
+        <% if can? :destroy, post %>
+      <%= link_to 'Delete', user_post_path(@user, post), method: :delete, data: { confirm: 'Are you sure?' }, class: 'delete-post' %>
+    <% end %>
       </div>
       <br>
     <% end %>
